<resources>
    <string name="app_name" translatable="false">Spinner Glow 3D</string>

    <string name="done">Done</string>
    <string name="language">Language</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="vong_phut">rev/min</string>
    <string name="draw_new">Draw New</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    <string name="color">Color</string>
    <string name="brush">Brush</string>
    <string name="pattern">Pattern</string>
    <string name="save">Save</string>
    <string name="save_success">Save Success</string>
    <string name="spin_now">Spin Now</string>
    <string name="battle_now">Battle Now</string>
    <string name="custom_spinner">CUSTOM SPINNER</string>
    <string name="select_color">Select Color</string>
    <string name="ready">READY</string>
    <string name="spin_together">SPIN TOGETHER</string>
    <string name="player_2">Player 2</string>
    <string name="you">You</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="let_spinner_fast">Keep spinning the spinner fast.</string>

</resources>