<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home" />

    <RelativeLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_nativeads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/app_nativeads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:gnt_size_min="true"
                app:gnt_template_type="@layout/gnt_medium_template_view" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layout_nativeads">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/save_success"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/btn_spin_now"
                android:layout_width="230dp"
                android:layout_height="55dp"
                android:layout_above="@id/btn_battle_now"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_btn_save"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/spin_now"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_battle_now"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_btn_battle"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/battle_now"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>